force-app/main/default/objects/Releases__c/Releases__c.object-meta.xml
<CustomObject>
    <description>Object that tracks Releases, by version.</description>
    <label>Release</label>
    <nameField>
        <label>Releases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>