force-app/main/default/objects/Releases__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-11478,CS21_1141:Used by CDM release team for security purpose</description>
    <inlineHelpText>Set it to true if the Release should not be displayed on the Customer Portal</inlineHelpText>
    <label>BlockedForDisplay</label>
    <type>Checkbox</type>
</CustomField>