force-app/main/default/objects/Releases__c/fields/BlockedForDownloads__c.field-meta.xml
<CustomField>
    <fullName>BlockedForDownloads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CS21_1141:Set it to true if the Release should not be displayed on the Polaris</description>
    <inlineHelpText>Set it to true if the Release should not be displayed on the Polaris</inlineHelpText>
    <label>BlockedForDownloads</label>
    <type>Checkbox</type>
</CustomField>