force-app/main/default/objects/Releases__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Date this version was released.</description>
    <inlineHelpText>Date this version was released.</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>