force-app/main/default/objects/Releases__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generally Available (GA)</fullName>
            </value>
            <value>
                <fullName>Direct Availability (DA)</fullName>
            </value>
            <value>
                <fullName>Early Access (EA)</fullName>
            </value>
            <value>
                <fullName>Edge Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>