force-app/main/default/objects/Releases__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Release Version</label>
    <referenceTo>Release_Version__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>