force-app/main/default/objects/Releases__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Blocked__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Version__c</columns>
    <columns>Release_Version__c</columns>
    <columns>Release_Type__c</columns>
    <columns>Release_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>